# eye-declare

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
.planning/: API_SIMPLIFICATION.md  COMPONENT_FN_TRANSITION.md  DESIGN.md
crates/eye_declare/: Cargo.toml
crates/eye_declare/examples/: agent_sim.rs  app.rs  chat.rs  data_children.rs  declarative.rs  growing.rs  interactive.rs  lifecycle.rs  markdown_demo.rs  nested.rs  terminal_demo.rs  wrapping.rs
crates/eye_declare/src/: app.rs  cells.rs  children.rs  component.rs  context.rs  element.rs  escape.rs  frame.rs  hooks.rs  inline.rs  lib.rs  node.rs  renderer.rs  terminal.rs  wrap.rs
crates/eye_declare/src/components/: canvas.rs  markdown.rs  mod.rs  spinner.rs  text.rs  view.rs
crates/eye_declare/tests/: element_macro.rs
crates/eye_declare_macros/: Cargo.toml
crates/eye_declare_macros/src/: codegen.rs  component.rs  lib.rs  parse.rs  props.rs
docs/: undox.yaml
docs/content/: index.md
docs/content/getting-started/: installation.md  introduction.md  quick-start.md
docs/content/guide/: application.md  components.md  context.md  (+5 more)
docs/scripts/: install-undox.sh
examples/: app.rs  declarative.rs  growing.rs  interactive.rs  lifecycle.rs  markdown_demo.rs  terminal_demo.rs  wrapping.rs
scripts/: release
src/: app.rs  component.rs  element.rs  escape.rs  frame.rs  inline.rs  lib.rs  node.rs  renderer.rs  terminal.rs  wrap.rs
src/components/: markdown.rs  mod.rs  spinner.rs  text.rs
src/elements/: markdown.rs  mod.rs  spinner.rs  text.rs  vstack.rs
(+3 files in other folders)
