[package]
name = "eye_declare"
description = "Declarative inline TUI rendering library for Rust"
repository = "https://github.com/BinaryMuse/eye-declare"
version = "0.2.1"
edition = "2024"
license = "MIT"
readme = "../../README.md"

[dependencies]
ratatui-core = "0.1"
ratatui-widgets = { version = "0.3", features = [
  "unstable-rendered-line-info",
] }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"
tokio = { version = "1", features = [
  "sync",
  "time",
  "macros",
  "rt",
  "rt-multi-thread",
] }
futures = "0.3"
eye_declare_macros = { path = "../eye_declare_macros", version = "0.2.0", optional = true }
typed-builder = "0.23.2"

[features]
default = ["macros"]
macros = ["dep:eye_declare_macros"]
