[package]
name = "eye_declare_macros"
description = "Macros for eye_declare"
repository = "https://github.com/BinaryMuse/eye-declare"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
